--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 movies_initial.csv
-sentiment_analysis/
+crawlings/imdb_crawl0_10000.csv
+sentiment_analysis/IMDB Dataset.csv
+sentiment_analysis/models/DistilBERTSentimentAnalysis2Epochs.h5
+sentiment_analysis/preprocessed/train.csv
