finally corrected all dependency files

--- a/sentiment_analysis/requirements.txt
+++ b/sentiment_analysis/requirements.txt
@@ -1,1 +1,10 @@
-
+keras==2.12.0
+matplotlib==3.7.1
+nltk==3.8.1
+numpy==1.23.5
+pandas==2.0.0
+scikit_learn==1.2.2
+tensorflow==2.12.0
+tensorflow_intel==2.12.0
+torch==2.0.0
+transformers==4.28.1
