--- a/data_exploration/requirements.txt
+++ b/data_exploration/requirements.txt
@@ -2,5 +2,11 @@ dash==2.9.3
 dash_core_components==2.0.0
 dash_html_components==2.0.0
 dash_table==5.0.0
+matplotlib==3.7.1
+nltk==3.8.1
+numpy==1.23.5
 pandas==2.0.0
 plotly==5.14.1
+scipy==1.10.1
+seaborn==0.12.2
+wordcloud==1.9.1.1
