--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,19 @@ dash_core_components==2.0.0
 dash_html_components==2.0.0
 dash_table==5.0.0
 IMDbPY==2022.7.9
+IMDbPY==2022.7.9
+keras==2.12.0
+matplotlib==3.7.1
+nltk==3.8.1
+numpy==1.23.5
 pandas==2.0.0
 plotly==5.14.1
 ratelimit==2.2.1
+scikit_learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+tensorflow==2.12.0
+tensorflow_intel==2.12.0
+torch==2.0.0
+transformers==4.28.1
+wordcloud==1.9.1.1
